fix: update user details style on mobile screen

--- a/src/Pages/UserDetails/UserDetails.scss
+++ b/src/Pages/UserDetails/UserDetails.scss
@@ -1,9 +1,9 @@
 .user-details-page {
   color: #213F7D;
-  margin-top: 100px;font-family: Work Sans, sans-serif;
-font-weight: 600;
-line-height: 100%;
-letter-spacing: 0px;
+  padding-top: 105px;
+  font-family: Work Sans, sans-serif;
+  font-weight: 600;
+  line-height: 100%;
 
 
   .back-link {
@@ -23,7 +23,7 @@ letter-spacing: 0px;
     margin-bottom: 40px;
 
     h1 {
-      font-size: 24px;
+      font-size: 25px;
       font-weight: 500;
     }
 
@@ -190,7 +190,7 @@ letter-spacing: 0px;
 }
 @media (max-width: 768px) {
   .user-details-page {
-    margin-top: 80px;
+    padding-top: 95px;
 
     .profile-header {
       gap: 15px !important;
@@ -206,6 +206,10 @@ letter-spacing: 0px;
     .page-header {
       flex-direction: column;
       align-items: flex-start;
+      
+      h1{
+        padding: 20px 0;
+      }
 
       .action-buttons {
         width: 100%;
