--- a/src/index.scss
+++ b/src/index.scss
@@ -50,7 +50,6 @@
 }
 
 .error-page{
-  border: 2px solid red;
   height: 100vh;
   display: inline-block;
   place-content: center;
@@ -80,6 +79,7 @@
     .main-content {
       flex: 1;
       padding: 20px;
+     margin-top: 30px;
     }
   }
 }
